# Monthly_report_automate

./: .env.example  .gitignore  README.md  automate.py  check_outlook_accounts.py  main.py  pyproject.toml  run_automate.bat  send_email.py
sql/: cashDividend.sql  changeAddress.sql  lost.sql  stockDividend.sql  transferNumber.sql
