[project]
name = "monthly-report-automate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aspose-cells==24.10.0",
    "aspose-cells-python==25.9.0",
    "astroid==3.3.11",
    "autopep8==2.3.2",
    "black==25.9.0",
    "cffi==2.0.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "cryptography==46.0.2",
    "dill==0.4.0",
    "et-xmlfile==2.0.0",
    "flake8==7.3.0",
    "isort==6.1.0",
    "jpype1==1.6.0",
    "mccabe==0.7.0",
    "msoffcrypto-tool==5.4.2",
    "mypy-extensions==1.1.0",
    "numpy==2.3.3",
    "olefile==0.47",
    "openpyxl==3.1.5",
    "oracledb==3.4.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pathspec==0.12.1",
    "platformdirs==4.4.0",
    "pycodestyle==2.14.0",
    "pycparser==2.23",
    "pyflakes==3.4.0",
    "pylint==3.3.9",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytokens==0.1.10",
    "pytz==2025.2",
    "pywin32==311",
    "six==1.17.0",
    "tomlkit==0.13.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
]
